# CloudKinect

./: .gitignore  AuxFuncs.cmake  CMakeLists.txt  README.md
doc/: Doxyfile.in
include/TermColorPrint/: TermColorPrint.h
src/: gpu_cloud.cpp
src/TermColorPrint/: TermColorPrint.cpp
